<resources>
    <string name="app_name">AdvFarmerProjectUAS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="welcomename">Name</string>
    <string name="welcomeage">Age</string>
    <string name="welcomeweight">Weight</string>
    <string name="welcomeheight">Height</string>
    <string name="welcomepgoal">Personal Goal</string>
    <string name="maintain">Maintain Weight</string>
    <string name="gain">Gain Weight</string>
    <string name="loss">Loss Weight</string>
    <string name="startjourney">Start The Journey</string>
    <string name="date">Date</string>
    <string name="calories">cal</string>
    <string name="need">needed for today</string>
    <string name="whatfood">What you Eat?</string>
    <string name="calorieadd">Calorie Approx</string>
    <string name="logmeal">Log This Meal</string>
    <string name="foodlogusergender">Gender</string>
    <string name="foodloguserage">, 00 years old</string>
    <string name="foodlogusername">User Name</string>
    <string name="foodlogdate">Day Month Year</string>
    <string name="foodlogdailyenergyintake">Daily Energy Intake</string>
    <string name="foodlogstatustitle">Status</string>
    <string name="foodlogcalories">000 Cal</string>
    <string name="foodlogstatus">STATUS</string>
    <string name="foodlogcalprogress">0 Cal</string>
    <string name="foodlogcaltarget">0000 Cal</string>
    <string name="foodlog">Food Log</string>
    <string name="foodreport">Food Journal Report</string>
    <string name="reportBulan">Bulan Tahun</string>
    <string name="reportitemdate">1 May 2020</string>
    <string name="reportitemmeal">6 meals</string>
    <string name="reportitemcal">(3300 cal)</string>
    <string name="reportitemstatustitle">Status</string>
    <string name="reportitemstatus">EXCEED</string>
    <string name="foodlogitemmeal">Meal Name</string>
    <string name="foodlogitemcal">000 Cal</string>
    <string name="profiletitle">User Profile</string>
    <string name="profileupdate">Update Profile</string>
    <string name="nofoodlog">You Don\'t Have A Food Log Yet</string>
    <array name="genderList">
        <item name="Male">Male</item>
        <item name="Female">Female</item>
    </array>
</resources>